test/sema/return-type-missing-generic-args.delta
// RUN: %not %delta -typecheck %s | %FileCheck %s

// CHECK: [[@LINE+1]]:1: error: too few generic arguments to 'List', expected 1
List f() {
    return List<int>();
}
